k8s/grafana/grafana_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: pfe
  labels:
    app: grafana
spec:
  selector:
    app: grafana
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
